prepare GPU transition with temperatureMap & shaders